Completed Nobel DataFrame notebook exercises

--- a/nobel_df.ipynb
+++ b/nobel_df.ipynb
@@ -156,10 +156,10 @@
    "metadata": {},
    "source": [
     "# Getting Documentation on Python elements\n",
-    "You can utilize the built-in `help()` function for documentation on Python elements.  Simply run `help()`, passing in the package, module, class, object, method, or function. \r\n",
+    "You can utilize the built-in `help()` function for documentation on Python elements.  Simply run `help()`, passing in the package, module, class, object, method, or function. \n",
     "Assuming we aliased pandas as` p`d when we imported it, we can run` help(pd`) to see information on the pandas package;` help(pd.DataFrame`) for all the methods and attributes of a dataframe (note we can also pass in an already created DataFrame object instead); and` help(pd.read_csv`) to learn more about the pandas function for reading CSV files into Python and how to use it\n",
     "\n",
-    "**Run the code cell below to see documentation for the DataFrame class.**\r\n"
+    "**Run the code cell below to see documentation for the DataFrame class.**\n"
    ]
   },
   {
@@ -260,18 +260,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add your code below this line"
+    "df.tail(10)[['firstname', 'surname', 'born', 'died', 'year', 'country']]\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Querying & Locating Data in the DataFrame\r\n",
-    "One of the most useful tasks in pandas is locating data that satisfies desired criteria. For example, we can locate a Nobel laureate with a particular surname. Let’s look at the record of Caltech’s most beloved figure, physicist Richard Feynman (pronounced “FINE-men”). In addition to his groundbreaking work in theoretical physics (especially quantum electrodynamics and its associated Feynman diagrams), Feynman is known for The Feynman Lectures on Physics, which covers the elementary physics curriculum (mechanics, thermal physics, electrodynamics, etc.) in an unusually entertaining and insightful way.\r\n",
+    "# Querying & Locating Data in the DataFrame\n",
+    "One of the most useful tasks in pandas is locating data that satisfies desired criteria. For example, we can locate a Nobel laureate with a particular surname. Let’s look at the record of Caltech’s most beloved figure, physicist Richard Feynman (pronounced “FINE-men”). In addition to his groundbreaking work in theoretical physics (especially quantum electrodynamics and its associated Feynman diagrams), Feynman is known for The Feynman Lectures on Physics, which covers the elementary physics curriculum (mechanics, thermal physics, electrodynamics, etc.) in an unusually entertaining and insightful way.\n",
     "Let’s use square brackets and a boolean criterion on the \"surname\" column to find Feynman’s record in the laureates da. \n",
     "\n",
-    "**What can you conclude from the format of this query below and results produce?**a\r\n"
+    "**What can you conclude from the format of this query below and results produce?**a\n"
    ]
   },
   {
@@ -351,7 +351,7 @@
     "Use the `loc` attribute illustrated above to code a query on this dataset to:\n",
     "\n",
     "**Find all Nobel laureates named named 'Curie'**  \n",
-    "**Tip:** Use the Boolean condition: df[\"surname\"].str.contains(\"Curie\", na=False)   \r\n"
+    "**Tip:** Use the Boolean condition: df[\"surname\"].str.contains(\"Curie\", na=False)   \n"
    ]
   },
   {
@@ -360,7 +360,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Code and test your scriplet to find all 'Curies' \n",
+    "curies = df.loc[df[\"surname\"].str.contains(\"Curie\", na=False)]\n",
+    "\n",
     "# Assigned the results to a variable named curies."
    ]
   },
@@ -386,10 +387,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Selecting Dates & Time information** \r\n",
+    "**Selecting Dates & Time information** \n",
     "Pandas provides good support fordatetimee. Let’s search for laureates by exact birthday as a strin - the default pandas storage format for dates.\n",
     "\n",
-    "**Run the code cell below** to get the result entry for Eistein born 3/14/1879 fondly known as Pi Day.\r\n"
+    "**Run the code cell below** to get the result entry for Eistein born 3/14/1879 fondly known as Pi Day.\n"
    ]
   },
   {
@@ -432,7 +433,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code for the Physics category Tau Day Nobel Laureates below "
+    "tau_physicists = df.loc[\n",
+    "    (df['born'].str.contains('06-28', na=False)) & \n",
+    "    (df['category'] == 'physics')\n",
+    "]\n"
    ]
   }
  ],
